--- a/registration/registration-client/src/main/resources/application-pink.css
+++ b/registration/registration-client/src/main/resources/application-pink.css
@@ -189,7 +189,7 @@
 	-fx-background-radius: 0.0;
 	-fx-background-color: transparent;
 	-fx-text-fill: black;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .sendNotificationPane {
@@ -569,7 +569,7 @@
 	-fx-pref-width: 120.0px;
 	-fx-background-color:#FFFFFF;
 	-fx-border-color: #FF4081;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .reRegCantInformToggle{
@@ -577,7 +577,7 @@
 	-fx-pref-width: 120.0px;
 	-fx-background-color: #FF4081;
 	-fx-text-fill: #FFFFFF;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .reRegCantInformToggle:hover {
@@ -1442,7 +1442,7 @@ Working on new Css by taleev
 .table-view .column-header .label {
 	-fx-alignment: CENTER;
 	-fx-text-fill: #666666;
-	-fx-font: 15.0px Roboto;
+	-fx-font: 15.0px Noto Sans Myanmar;
 }
 
 .table-view>.virtual-flow>.scroll-bar {
@@ -1460,7 +1460,7 @@ Working on new Css by taleev
 .heading {
 	-fx-font-size: 26.0px;
 	-fx-text-fill: #FF4081;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 /*
@@ -1474,7 +1474,7 @@ Working on new Css by taleev
 
 .rejectionPageHeaderLabel {
 	-fx-text-fill: #000000;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 15.0px;
 	-fx-pref-heigth: 100.0;
 	-fx-pref-width: 400.0;
@@ -1579,13 +1579,13 @@ Working on new Css by taleev
 }
 
 .mainHeader {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-text-fill: #FD518C;
 	-fx-font-size: 20.0px;
 }
 
 .settingsLabelStyle {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 }
 
@@ -1683,7 +1683,7 @@ Working on new Css by taleev
 	-fx-border-radius: 3.0, 3.0, 3.0, 3.0;
 	-fx-background-color: #FF4081;
 	-fx-text-fill: #FFFFFF;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .approveButton:hover {
@@ -1707,7 +1707,7 @@ Working on new Css by taleev
 	-fx-border-radius: 3.0, 3.0, 3.0, 3.0;
 	-fx-background-color: #FFFFFF;
 	-fx-border-color: #FF4081;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .rejectButton:hover {
@@ -1777,7 +1777,7 @@ Working on new Css by taleev
 .templateHeading {
 	-fx-font-size: 18.0px;
 	-fx-text-fill: #FF4081;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .ackBackButton {
@@ -1785,7 +1785,7 @@ Working on new Css by taleev
 	-fx-border-radius: 3.0, 3.0, 3.0, 3.0;
 	-fx-background-color: #FFFFFF;
 	-fx-border-color: #FF4081;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .ackBackButton:hover {
@@ -1805,7 +1805,7 @@ Working on new Css by taleev
 	-fx-border-radius: 3.0, 3.0, 3.0, 3.0;
 	-fx-background-color: #FF4081;
 	-fx-text-fill: white;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .ackPageButton:hover {
@@ -1863,7 +1863,7 @@ Working on new Css by taleev
 
 .headerDetails .label {
 	-fx-text-fill: white;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 14.0px;
 }
 
@@ -1941,7 +1941,7 @@ Working on new Css by taleev
 
 .optionHeaderStyle {
 	-fx-text-fill: #666666;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 	-fx-font-weight: lighter;
 }
@@ -1953,7 +1953,7 @@ Working on new Css by taleev
 	-fx-border-color: #FF4081;
 	-fx-background-color: #FF4081;
 	-fx-text-fill: white;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .uinUpdateStyle {
@@ -1985,7 +1985,7 @@ Working on new Css by taleev
 .uinUpdateBtnStyle {
 	-fx-font-size: 16.0px;
 	-fx-text-fill: #FF4081;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-background-color: #FFFFFF;
 	-fx-border-radius: 0.0, 0.0, 0.0, 0.0;
 }
@@ -2032,14 +2032,14 @@ Working on new Css by taleev
 
 .syncJobLabel {
 	-fx-text-fill: #FF4081;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 	-fx-pref-width: 100.0px;
 }
 
 .deviceDetailsLabel {
 	-fx-text-fill: #000000;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 14.0px;
 	-fx-font-weight: bold;
 }
@@ -2049,7 +2049,7 @@ Working on new Css by taleev
 	-fx-border-radius: 4.0, 4.0, 4.0, 4.0;
 	-fx-border-color: #FF4081;
 	-fx-background-color: #FFFFFF;
-	-fx-font: 14.0px "Roboto";
+	-fx-font: 14.0px "Noto Sans Myanmar";
 	-fx-font-weight: bold;
 	-fx-pref-width: 450;
 }
@@ -2062,13 +2062,13 @@ Working on new Css by taleev
 
 .operationalTitle {
 	-fx-text-fill: #FF4081;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 }
 
 .operationalDetails {
 	-fx-text-fill: #FF4081;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 }
 
@@ -2140,19 +2140,19 @@ Working on new Css by taleev
 .newsUpdatesTitle {
 	-fx-font-size: 11.0px;
 	-fx-text-fill: #666666;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-weight: bold;
 }
 
 .newsUpdateTime {
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #666666;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-weight: lighter;
 }
 
 .powerdBy {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 }
 
@@ -2163,7 +2163,7 @@ Working on new Css by taleev
 #newsViewAll {
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #666666;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-weight: bold;
 }
 /* Home Page Design Ends */
@@ -2174,7 +2174,7 @@ Working on new Css by taleev
 }
 
 .useronBoardLinkDesc {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 1.2em;
 	-fx-text-fill: #666666;
 }
@@ -2200,18 +2200,18 @@ Working on new Css by taleev
 
 .useronBoardLink {
 	-fx-text-fill: #FF4081;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .onboardAlertMsg {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 	-fx-text-fill: #45A30A;
 	-fx-background-color: White;
 }
 
 .biometricsDisplay {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 	-fx-border-color: pink;
 	-fx-border-insets: 1;
@@ -2235,25 +2235,25 @@ Working on new Css by taleev
 }
 
 .onboardOperatorDetailsHeader {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #000000;
 }
 
 .onboardOperatorDetails {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #000000;
 }
 
 .onboardPageBioTitle {
 	-fx-text-fill: #FD518C;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 }
 
 .onboardBioDetailsHeader {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-text-fill: #666666;
 	-fx-font-weight: lighter;
 	-fx-font-size: 14.0px;
@@ -2269,7 +2269,7 @@ Working on new Css by taleev
 }
 
 .onboardInfoDetails {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #666666;
 	-fx-font-weight: lighter;
@@ -2312,7 +2312,7 @@ Working on new Css by taleev
 }
 
 .onboardInfoDetailsName {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #333333;
 }
@@ -2326,7 +2326,7 @@ Working on new Css by taleev
 }
 
 .onboardExceptionDetails {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #666666;
 	-fx-font-weight: lighter;
@@ -2334,20 +2334,20 @@ Working on new Css by taleev
 
 #onboardPageTitle {
 	-fx-text-fill: #FD518C;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 18.0px;	
 }
 
 #onboardHomeLink {
 	-fx-text-fill: #C9C9C9;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-weight: lighter;
 	-fx-font-size: 13.0px;
 }
 
 #onboardPageDesc {
 	-fx-text-fill: #666666;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 14.0px;
 }
 
@@ -2430,42 +2430,42 @@ Working on new Css by taleev
 
 /*Tracker Style */
 .completedPage {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #E43391;
 	-fx-font-weight: lighter;
 }
 
 .currentPage {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 14.0px;
 	-fx-text-fill: #E43391;
 	-fx-font-weight: bold;
 }
 
 .pendingPage {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #000000;
 	-fx-font-weight: lighter;
 }
 
 .subPageCompleted {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #E43391;
 	-fx-font-weight: lighter;
 }
 
 .subPageUncompleted {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #000000;
 	-fx-font-weight: lighter;
 }
 
 .subPageCurrent {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #E43391;
 	-fx-font-weight: lighter;
@@ -2505,7 +2505,7 @@ Working on new Css by taleev
 	-fx-border-color: #FF4081;
 	-fx-background-color: #FF4081;
 	-fx-text-fill: white;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-cursor: hand;
 }
 
