--- a/registration/registration-client/src/main/resources/application.css
+++ b/registration/registration-client/src/main/resources/application.css
@@ -189,7 +189,7 @@
 	-fx-background-radius: 0.0;
 	-fx-background-color: transparent;
 	-fx-text-fill: black;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .sendNotificationPane {
@@ -574,7 +574,7 @@
 	-fx-pref-width: 120.0px;
 	-fx-background-color: #FFFFFF;
 	-fx-border-color: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .reRegCantInformToggle {
@@ -582,7 +582,7 @@
 	-fx-pref-width: 120.0px;
 	-fx-background-color: #005baa;
 	-fx-text-fill: #FFFFFF;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .reRegCantInformToggle:hover {
@@ -1467,7 +1467,7 @@ Working on new Css by taleev
 .table-view .column-header .label {
 	-fx-alignment: CENTER;
 	-fx-text-fill: #666666;
-	-fx-font: 15.0px Roboto;
+	-fx-font: 15.0px Noto Sans Myanmar;
 }
 
 .table-view>.virtual-flow>.scroll-bar {
@@ -1485,7 +1485,7 @@ Working on new Css by taleev
 .heading {
 	-fx-font-size: 26.0px;
 	-fx-text-fill: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 /*
@@ -1499,7 +1499,7 @@ Working on new Css by taleev
 
 .rejectionPageHeaderLabel {
 	-fx-text-fill: #000000;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 15.0px;
 	-fx-pref-heigth: 100.0;
 	-fx-pref-width: 400.0;
@@ -1605,13 +1605,13 @@ Working on new Css by taleev
 }
 
 .mainHeader {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-text-fill: #005baa;
 	-fx-font-size: 20.0px;
 }
 
 .settingsLabelStyle {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 }
 
@@ -1709,7 +1709,7 @@ Working on new Css by taleev
 	-fx-border-radius: 3.0, 3.0, 3.0, 3.0;
 	-fx-background-color: #005baa;
 	-fx-text-fill: #FFFFFF;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .approveButton:hover {
@@ -1733,7 +1733,7 @@ Working on new Css by taleev
 	-fx-border-radius: 3.0, 3.0, 3.0, 3.0;
 	-fx-background-color: #FFFFFF;
 	-fx-border-color: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .rejectButton:hover {
@@ -1803,7 +1803,7 @@ Working on new Css by taleev
 .templateHeading {
 	-fx-font-size: 18.0px;
 	-fx-text-fill: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .ackBackButton {
@@ -1811,7 +1811,7 @@ Working on new Css by taleev
 	-fx-border-radius: 3.0, 3.0, 3.0, 3.0;
 	-fx-background-color: #FFFFFF;
 	-fx-border-color: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .ackBackButton:hover {
@@ -1831,7 +1831,7 @@ Working on new Css by taleev
 	-fx-border-radius: 3.0, 3.0, 3.0, 3.0;
 	-fx-background-color: #005baa;
 	-fx-text-fill: white;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .ackPageButton:hover {
@@ -1889,7 +1889,7 @@ Working on new Css by taleev
 
 .headerDetails .label {
 	-fx-text-fill: white;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 14.0px;
 }
 
@@ -1967,7 +1967,7 @@ Working on new Css by taleev
 
 .optionHeaderStyle {
 	-fx-text-fill: #666666;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 	-fx-font-weight: lighter;
 }
@@ -1979,7 +1979,7 @@ Working on new Css by taleev
 	-fx-border-color: #005baa;
 	-fx-background-color: #005baa;
 	-fx-text-fill: white;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .uinUpdateStyle {
@@ -2011,7 +2011,7 @@ Working on new Css by taleev
 .uinUpdateBtnStyle {
 	-fx-font-size: 16.0px;
 	-fx-text-fill: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-background-color: #FFFFFF;
 	-fx-border-radius: 0.0, 0.0, 0.0, 0.0;
 }
@@ -2059,14 +2059,14 @@ Working on new Css by taleev
 
 .syncJobLabel {
 	-fx-text-fill: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 	-fx-pref-width: 100.0px;
 }
 
 .deviceDetailsLabel {
 	-fx-text-fill: #000000;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 14.0px;
 	-fx-font-weight: bold;
 }
@@ -2076,7 +2076,7 @@ Working on new Css by taleev
 	-fx-border-radius: 4.0, 4.0, 4.0, 4.0;
 	-fx-border-color: #005baa;
 	-fx-background-color: #FFFFFF;
-	-fx-font: 14.0px "Roboto";
+	-fx-font: 14.0px "Noto Sans Myanmar";
 	-fx-font-weight: bold;
 	-fx-pref-width: 450;
 }
@@ -2089,13 +2089,13 @@ Working on new Css by taleev
 
 .operationalTitle {
 	-fx-text-fill: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 }
 
 .operationalDetails {
 	-fx-text-fill: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 }
 
@@ -2170,19 +2170,19 @@ Working on new Css by taleev
 .newsUpdatesTitle {
 	-fx-font-size: 11.0px;
 	-fx-text-fill: #666666;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-weight: bold;
 }
 
 .newsUpdateTime {
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #666666;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-weight: lighter;
 }
 
 .powerdBy {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 }
 
@@ -2193,7 +2193,7 @@ Working on new Css by taleev
 #newsViewAll {
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #666666;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-weight: bold;
 }
 /* Home Page Design Ends */
@@ -2204,7 +2204,7 @@ Working on new Css by taleev
 }
 
 .useronBoardLinkDesc {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 1.2em;
 	-fx-text-fill: #666666;
 }
@@ -2230,18 +2230,18 @@ Working on new Css by taleev
 
 .useronBoardLink {
 	-fx-text-fill: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 }
 
 .onboardAlertMsg {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 	-fx-text-fill: #45A30A;
 	-fx-background-color: White;
 }
 
 .biometricsDisplay {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 	-fx-border-color: #0286f7;
 	-fx-border-insets: 1;
@@ -2265,25 +2265,25 @@ Working on new Css by taleev
 }
 
 .onboardOperatorDetailsHeader {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #000000;
 }
 
 .onboardOperatorDetails {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #000000;
 }
 
 .onboardPageBioTitle {
 	-fx-text-fill: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 16.0px;
 }
 
 .onboardBioDetailsHeader {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-text-fill: #666666;
 	-fx-font-weight: lighter;
 	-fx-font-size: 14.0px;
@@ -2299,7 +2299,7 @@ Working on new Css by taleev
 }
 
 .onboardInfoDetails {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #666666;
 	-fx-font-weight: lighter;
@@ -2342,7 +2342,7 @@ Working on new Css by taleev
 }
 
 .onboardInfoDetailsName {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #333333;
 }
@@ -2356,7 +2356,7 @@ Working on new Css by taleev
 }
 
 .onboardExceptionDetails {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #666666;
 	-fx-font-weight: lighter;
@@ -2364,20 +2364,20 @@ Working on new Css by taleev
 
 #onboardPageTitle {
 	-fx-text-fill: #005baa;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 18.0px;
 }
 
 #onboardHomeLink {
 	-fx-text-fill: #C9C9C9;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-weight: lighter;
 	-fx-font-size: 13.0px;
 }
 
 #onboardPageDesc {
 	-fx-text-fill: #666666;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 14.0px;
 }
 
@@ -2460,42 +2460,42 @@ Working on new Css by taleev
 
 /*Tracker Style */
 .completedPage {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #005baa;
 	-fx-font-weight: lighter;
 }
 
 .currentPage {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 14.0px;
 	-fx-text-fill: #005baa;
 	-fx-font-weight: bold;
 }
 
 .pendingPage {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #000000;
 	-fx-font-weight: lighter;
 }
 
 .subPageCompleted {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #005baa;
 	-fx-font-weight: lighter;
 }
 
 .subPageUncompleted {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 10.0px;
 	-fx-text-fill: #000000;
 	-fx-font-weight: lighter;
 }
 
 .subPageCurrent {
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-font-size: 12.0px;
 	-fx-text-fill: #005baa;
 	-fx-font-weight: lighter;
@@ -2534,7 +2534,7 @@ Working on new Css by taleev
 	-fx-border-color: #005baa;
 	-fx-background-color: #005baa;
 	-fx-text-fill: white;
-	-fx-font-family: Roboto;
+	-fx-font-family: Noto Sans Myanmar;
 	-fx-cursor: hand;
 }
 
@@ -2698,4 +2698,12 @@ Working on new Css by taleev
 .tab:selected.tabErrorLabel .tab-label {
     -fx-text-fill: #FF0000;
     -fx-font-weight: bold;
+}
+.invisible-text {
+    -fx-text-fill: white;
+}
+
+.language-label {
+	-fx-font-size: 18.0px;
+	-fx-text-fill: #005baa;
 }
